Actualizar título del proyecto en index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <p>Desarrollo de una página web que genera cuentos a partir de la voz, orientada a niños como usuarios y a padres como clientes.</p>
                     </div>
                     <div class="project">
-                        <h3>Tesis: Jetracer y YOLO</h3>
+                        <h3>Jetracer y YOLO</h3>
                         <p>Implementación de una Jetracer para calcular distancias utilizando predicciones de un modelo YOLO cargado en el robot.</p>
                     </div>
                     <div class="project">
